[css-contain] Size containment replaced elements intrinsic size is zero

The spec is very clear about this
(https://drafts.csswg.org/css-contain/#containment-size):
  "Replaced elements must be treated as having an intrinsic width
   and height of 0."

The patch modifies LayoutReplaced::ComputeIntrinsicSizingInfo()
so that it returns zero for elements with "contain: size".

BUG=853441
TEST=external/wpt/css/css-contain/contain-size-013.html

Change-Id: I91490b120a110be20a91d564da4fdc3d9a11b70a
Reviewed-on: https://chromium-review.googlesource.com/1110819
Reviewed-by: Morten Stenshorne <mstensho@chromium.org>
Commit-Queue: Manuel Rego Casasnovas <rego@igalia.com>
Cr-Commit-Position: refs/heads/master@{#569610}
Former-commit-id: cf0137c1ac3be7ceddd4506e397249ec54701af9